--- a/src/resources/css/MHST2.css
+++ b/src/resources/css/MHST2.css
@@ -22,6 +22,11 @@
     position: absolute;
     left: 140px;
     top: 40px;
+
+    /* NOTE: 網頁水平卷軸出現問題 */
+    overflow-x: hidden;
+    right: 0px;
+
     /* box-sizing: border-box; */
     /* border-color: white;
     padding: 20px;
