--- a/src/resources/css/MHST2.css
+++ b/src/resources/css/MHST2.css
@@ -51,12 +51,14 @@
 }
 
 .thEnvVar{
+    position:absolute;
     border-style: solid;
     border-color: rgb(5, 157, 245);
     border-radius: 10px;
     padding: 1px 1px 1px 1px;
     position: relative;
-    left: 150px;
+    /* left: 150px; */
+    left: 0px;
 }
 
 .thEnvVar:hover,
@@ -64,6 +66,12 @@
     border-color:red;
 }
 
+.sectionnav-link{
+    width: auto;
+    font-size: x-large;
+    text-align: center;
+    text-shadow: 3px 3px 5px slateblue;
+}
 
 .sectionVar{
     position: absolute;
@@ -87,13 +95,9 @@
 
 .listBarVar{
     position: relative;
-    left: 0px;
-    top: 0px;
     /* height: 50px; */
-    text-align: left;
     background-color:white;
-    font-size: x-large;
-    text-align: center;
+    text-align: right;
     border-style: solid;
     border-color: rgb(5, 157, 245);
     border-radius: 10px;
@@ -123,7 +127,8 @@
 .asideVar {
     overflow: auto;
     position: absolute;
-    left: 280px;
+    /* left: 280px; */
+    left: 0px;
     right: 0;
     top: 70px;
     bottom: 0;
@@ -147,4 +152,14 @@
 
 .Hiden{
     visibility: hidden;
+}
+
+
+.DonateInfo{
+    position: relative;
+    font-size: x-large;
+    background-color: skyblue;
+    width: 210px;
+    border-radius: 10px;
+
 }
