--- a/src/resources/css/MonsterInfo/index.css
+++ b/src/resources/css/MonsterInfo/index.css
@@ -1,3 +1,8 @@
+.box{
+  position: absolute;
+  left: 320px;
+}
+
 .selectButtonN{
   position: relative;
   left: 20px;
@@ -14,7 +19,7 @@
 
 .selectButton{
   position: relative;
-  left: 20px;
+  left: 310px;
   top:20px;
   border-style: outset;
   font-size: large;
