new layout test 2020_07_23_19_07

--- a/src/resources/css/MHST2.css
+++ b/src/resources/css/MHST2.css
@@ -24,11 +24,11 @@
 
 .navbarVarSetting{
     /* background-color: blue; */
-    position: relative;
-    left: -50px;
+    position: absolute;
+    left: 50px;
     top: 40px;
 
-    width: 280px;
+    width: 1000px;
 
     /* NOTE: 網頁水平卷軸出現問題 */
     overflow-x: hidden;
