--- a/src/resources/css/Monster.css
+++ b/src/resources/css/Monster.css
@@ -91,11 +91,11 @@ body{
 
 .OpenAllMenu{
   position: relative;
+  font-size: large;
   color:blue;
   text-shadow: 0px 0px 10px gold;
-  border-style:double;
-  border-color: teal;
-  border-radius: 20px;  
+  border-style:outset;
+  border-color:gray;
 
   left: -10px;
   right: 20px;
@@ -113,4 +113,10 @@ body{
   height: 50%;
   width: 50%;
   */
+}
+
+.followbox{
+  position: relative;
+  left: 100px;
+  top: 20px;
 }
