--- a/src/resources/css/Home.css
+++ b/src/resources/css/Home.css
@@ -17,6 +17,10 @@
   background-color: skyblue;
 }
 
+@media screen only screen and (min-width: 600px){
+  background-color: gold;
+}
+
 .UpdateNote{
   font-size: 30px;
   position: relative;
