--- a/src/resources/css/MHST2.css
+++ b/src/resources/css/MHST2.css
@@ -69,14 +69,15 @@
     position: relative;
     left: 2%;
     top: 0%;
-    font-size: large;
+    right: 0%;
+    bottom: 0px;
+    font-size: auto;
     width: auto;
     border-style: solid;
     border-color: rgb(5, 157, 245);
     border-radius: 10px;
     padding: 1px 1px 1px 1px;
     position: relative;
-    left: 35px;
 }
 
 .thEnvVar:hover,
