--- a/src/resources/css/MHST2.css
+++ b/src/resources/css/MHST2.css
@@ -1,14 +1,16 @@
 
 
 .headerVar{
-    position: absolute;
-    left: 0px;    
+    position: relative;
+    left: auto;    
     right: 0px;
     top: 0px;
     height: 8%;
     /* background-color: silver; */
+    /*
     background-image: url("../images/SceneMaterial/bg_header.jpg");
     background-repeat:repeat;
+    */
     color: burlywood;
     text-shadow: greenyellow 10px;
     text-align: center;
@@ -17,6 +19,26 @@
     border-radius: 10px;
     padding: 10px 10px 10px 10px;
 */
+}
+
+.headerBTNVar{
+    position: relative;
+    left: auto;    
+    right: 0px;
+    top: 50%;
+    height: 8%;
+    width: auto;
+    font-size: large;
+}
+
+.headerbox{
+    position: absolute;
+    left: 0px;    
+    right: 0px;
+    top: 0%;
+    bottom: 90%;
+    background-image: url("../images/SceneMaterial/bg_header.jpg");
+    background-repeat:repeat;
 }
 
 .navbar-nav{
